microk8s/console/traefik-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-ingress
  namespace: cloudflow
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: console-server
                port:
                  number: 80
